feat: add PR and JIRA commenting support to deploy-kotlin workflow
Add new optional input parameters for PR and JIRA commenting:
- comment-on-prs (default: true)
- comment-on-jira (default: true)

Both default to true since the changelog-cli validation will automatically
disable comments if required conditions aren't met:
- stage must be 'production'
- deployment-start-time and deployment-end-time must be provided
- Slack announcement must be posted
- JIRA credentials required for JIRA commenting

This means services don't need to explicitly enable the feature - it will
automatically work when they have proper deployment metadata for production
deployments.

Services can opt-out by setting these to false if needed.

--- a/.github/workflows/deploy-kotlin.yml
+++ b/.github/workflows/deploy-kotlin.yml
@@ -78,6 +78,16 @@ on:
         required: false
         type: string
         description: 'Regex pattern for excluding file paths from changelog - example: ^gateway/'
+      comment-on-prs:
+        required: false
+        type: boolean
+        default: true
+        description: 'Comment on PRs with production deployment information (automatically disabled if requirements not met)'
+      comment-on-jira:
+        required: false
+        type: boolean
+        default: true
+        description: 'Comment on JIRA tickets with production deployment information (automatically disabled if requirements not met)'
       run-tests:
         required: false
         type: boolean
@@ -296,3 +306,5 @@ jobs:
           deployment-start-time: ${{ needs.deploy.outputs.deployment-start-time }}
           deployment-end-time: ${{ needs.deploy.outputs.deployment-end-time }}
           deployment-url: ${{ needs.deploy.outputs.deployment-url }}
+          comment-on-prs: ${{ inputs.comment-on-prs }}
+          comment-on-jira: ${{ inputs.comment-on-jira }}
