--- a/.github/workflows/deploy-generic.yml
+++ b/.github/workflows/deploy-generic.yml
@@ -50,6 +50,10 @@ on:
         required: false
         type: string
         description: 'External Slack message ID to use for notifications (if not provided, initialize step will create one)'
+      argocd-server:
+        required: false
+        type: string
+        description: 'ArgoCD server URL (e.g., argocd.monta.app) for deployment monitoring'
     secrets:
       AWS_ACCOUNT_ID:
         required: true
@@ -72,6 +76,9 @@ on:
       TEST_ENV_FILE:
         required: false
         description: 'Environment variables for tests in .env format'
+      ARGOCD_TOKEN:
+        required: false
+        description: 'ArgoCD authentication token (required if auto-sync is enabled in config.yaml)'
 
     outputs:
       slack-message-id:
@@ -89,6 +96,15 @@ on:
       image-tag:
         description: 'Docker image tag that was deployed'
         value: ${{ jobs.deploy.outputs.image-tag }}
+      deployment-start-time:
+        description: 'ISO 8601 timestamp when ArgoCD started the sync (only if auto-sync enabled)'
+        value: ${{ jobs.deploy.outputs.deployment-start-time }}
+      deployment-end-time:
+        description: 'ISO 8601 timestamp when deployment became healthy (only if auto-sync enabled)'
+        value: ${{ jobs.deploy.outputs.deployment-end-time }}
+      deployment-url:
+        description: 'Direct URL to the application in ArgoCD UI (only if auto-sync enabled)'
+        value: ${{ jobs.deploy.outputs.deployment-url }}
 
 permissions:
   id-token: write
@@ -142,6 +158,8 @@ jobs:
       stage: ${{ inputs.stage }}
       image-tag: ${{ needs.build.outputs.image-tag }}
       slack-message-id: ${{ inputs.slack-message-id || needs.initialize.outputs.slack-message-id }}
+      argocd-server: ${{ inputs.argocd-server }}
     secrets:
       MANIFEST_REPO_PAT: ${{ secrets.MANIFEST_REPO_PAT }}
       SLACK_APP_TOKEN: ${{ secrets.SLACK_APP_TOKEN }}
+      ARGOCD_TOKEN: ${{ secrets.ARGOCD_TOKEN }}
