--- a/.github/workflows/component-build.yml
+++ b/.github/workflows/component-build.yml
@@ -45,11 +45,6 @@ on:
         required: false
         type: string
         description: 'Existing Slack message ID to update'
-      enable-cache:
-        required: false
-        type: boolean
-        default: false
-        description: 'Enable Docker layer caching'
     secrets:
       AWS_ACCOUNT_ID:
         required: true
@@ -146,9 +141,6 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-      - name: Set up Docker Buildx
-        if: inputs.enable-cache
-        uses: docker/setup-buildx-action@v3
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
@@ -164,14 +156,7 @@ jobs:
           context: .
           file: ./${{ inputs.docker-file-name }}
           push: true
-          # Disable provenance to keep single-platform images simple (not manifest lists)
-          # Buildx (used for caching) enables provenance by default, unlike the default docker driver
-          # Required for manual multi-arch manifest creation in create-manifest job
-          provenance: false
-          no-cache: ${{ !inputs.enable-cache }}
-          # Scope cache by architecture to prevent amd64/arm64 builds from overwriting each other
-          cache-from: ${{ inputs.enable-cache && format('type=gha,scope=build-{0}', matrix.arch) || '' }}
-          cache-to: ${{ inputs.enable-cache && format('type=gha,mode=max,scope=build-{0}', matrix.arch) || '' }}
+          no-cache: true
           build-args: |
             ${{ inputs.additional-build-args }}
           labels: |
