--- a/.github/actions/argocd-wait-sync/action.yml
+++ b/.github/actions/argocd-wait-sync/action.yml
@@ -15,6 +15,7 @@ inputs:
   timeout:
     description: 'Timeout duration in seconds to wait for ArgoCD sync to apply'
     required: false
+    type: number
     default: '300'
   revision:
     description: 'Expected git revision/commit SHA to verify deployment'
