--- a/.github/workflows/component-deploy.yml
+++ b/.github/workflows/component-deploy.yml
@@ -33,6 +33,7 @@ on:
       argocd-sync-wait-seconds:
         required: false
         default: '300'
+        type: number
         description: 'Timeout duration in seconds to wait for ArgoCD sync to apply'
     secrets:
       MANIFEST_REPO_PAT:
