chore: expose argocd sync wait timeout (#219)
* chore: expose argocd sync wait timeout

* chore: add type

* chore: actual number

--- a/.github/actions/argocd-wait-sync/action.yml
+++ b/.github/actions/argocd-wait-sync/action.yml
@@ -13,9 +13,10 @@ inputs:
     description: 'ArgoCD authentication token'
     required: true
   timeout:
-    description: 'Timeout in seconds to wait for sync completion'
+    description: 'Timeout duration in seconds to wait for ArgoCD sync to apply'
     required: false
-    default: '300'
+    type: number
+    default: 300
   revision:
     description: 'Expected git revision/commit SHA to verify deployment'
     required: true
