--- a/.github/workflows/component-deploy-v2.yml
+++ b/.github/workflows/component-deploy-v2.yml
@@ -109,6 +109,12 @@ jobs:
           repository: monta-app/${{ inputs.repository-name || format('service-{0}', inputs.service-identifier) }}
           path: 'service-repo'
           token: ${{ secrets.MANIFEST_REPO_PAT }}
+      - name: Setup main branch
+        working-directory: './service-repo'
+        shell: bash
+        run: |
+          git checkout -B main origin/main
+          git branch --set-upstream-to=origin/main main
       - name: Capture current image info
         id: capture-image-info
         shell: bash
