--- a/.github/workflows/component-deploy-v2.yml
+++ b/.github/workflows/component-deploy-v2.yml
@@ -113,6 +113,7 @@ jobs:
         working-directory: './service-repo'
         shell: bash
         run: |
+          git fetch origin main
           git checkout -B main origin/main
           git branch --set-upstream-to=origin/main main
       - name: Capture current image info
