--- a/.github/workflows/component-deploy.yml
+++ b/.github/workflows/component-deploy.yml
@@ -154,23 +154,21 @@ jobs:
           MAX_RETRIES=5
           RETRY_DELAY=5
 
-          for i in $(seq 1 $MAX_RETRIES); do
+          for i in $(seq 1 "$MAX_RETRIES"); do
             echo "Push attempt $i of $MAX_RETRIES..."
 
-            if git push https://x-access-token:${GITHUB_TOKEN}@github.com/monta-app/kube-manifests.git HEAD:main; then
+            if git push "https://x-access-token:${GITHUB_TOKEN}@github.com/monta-app/kube-manifests.git" HEAD:main; then
               echo "✓ Push successful"
               exit 0
             fi
 
-            if [ $i -lt $MAX_RETRIES ]; then
+            if [ "$i" -lt "$MAX_RETRIES" ]; then
               echo "⚠️  Push failed, rebasing and retrying in ${RETRY_DELAY}s..."
-              sleep $RETRY_DELAY
+              sleep "$RETRY_DELAY"
 
               # Fetch latest changes and rebase
               git fetch origin main
-              git rebase origin/main
-
-              if [ $? -ne 0 ]; then
+              if ! git rebase origin/main; then
                 echo "❌ Rebase failed - there may be conflicts"
                 git rebase --abort
                 exit 1
