--- a/.github/workflows/component-deploy.yml
+++ b/.github/workflows/component-deploy.yml
@@ -138,46 +138,15 @@ jobs:
             echo "enabled=false" >> "$GITHUB_OUTPUT"
             echo "⏭️ ArgoCD auto-sync is not configured for this application"
           fi
-      - name: Commit to manifest repository
-        working-directory: './manifests'
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git commit -am "Bump docker tag for ${{ inputs.service-identifier }} on ${{ inputs.stage }}"
-        shell: bash
-      - name: Push changes with retry
-        shell: bash
-        working-directory: './manifests'
-        env:
-          GITHUB_TOKEN: ${{ secrets.MANIFEST_REPO_PAT }}
-        run: |
-          MAX_RETRIES=5
-          RETRY_DELAY=5
-
-          for i in $(seq 1 "$MAX_RETRIES"); do
-            echo "Push attempt $i of $MAX_RETRIES..."
-
-            if git push "https://x-access-token:${GITHUB_TOKEN}@github.com/monta-app/kube-manifests.git" HEAD:main; then
-              echo "✓ Push successful"
-              exit 0
-            fi
-
-            if [ "$i" -lt "$MAX_RETRIES" ]; then
-              echo "⚠️  Push failed, rebasing and retrying in ${RETRY_DELAY}s..."
-              sleep "$RETRY_DELAY"
-
-              # Fetch latest changes and rebase
-              git fetch origin main
-              if ! git rebase origin/main; then
-                echo "❌ Rebase failed - there may be conflicts"
-                git rebase --abort
-                exit 1
-              fi
-            else
-              echo "❌ Push failed after $MAX_RETRIES attempts"
-              exit 1
-            fi
-          done
+      - name: Commit and push with automatic retry
+        uses: Artur-Davtyan/git-rebase-push-action@v1
+        with:
+          repository_path: manifests
+          commit_message: "Bump docker tag for ${{ inputs.service-identifier }} on ${{ inputs.stage }}"
+          user_name: "GitHub Action"
+          user_email: "action@github.com"
+          max_retries: 10
+          retry_delay: 2
       - name: Get manifest commit SHA
         id: manifest-sha
         shell: bash
