--- a/.github/workflows/semgrep-security-scan.yml
+++ b/.github/workflows/semgrep-security-scan.yml
@@ -159,7 +159,7 @@ jobs:
       # When invoked from other events (e.g., via workflow_call on push),
       # github.event_name will not be 'pull_request' and this step will be skipped.
       - name: Post PR Comment
-        if: github.event_name == 'pull_request' && always()
+        if: steps.evaluate.outputs.total > 0 && github.event_name == 'pull_request' && always()
         uses: actions/github-script@v7
         with:
           script: |
