--- a/.github/workflows/deploy-kotlin.yml
+++ b/.github/workflows/deploy-kotlin.yml
@@ -107,6 +107,10 @@ on:
         default: 300
         type: number
         description: 'Timeout duration in seconds to wait for ArgoCD sync to apply'
+      git-ref:
+        required: false
+        type: string
+        description: 'Git ref (branch, tag, or SHA) to checkout and build from. Defaults to the triggering ref.'
 
     secrets:
       GHL_USERNAME:
@@ -225,6 +229,7 @@ jobs:
       additional-build-args: ${{ inputs.additional-build-args }}
       ecr-repository-name: ${{ inputs.ecr-repository-name }}
       slack-message-id: ${{ needs.initialize.outputs.slack-message-id }}
+      git-ref: ${{ inputs.git-ref }}
     secrets:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       SLACK_APP_TOKEN: ${{ secrets.SLACK_APP_TOKEN }}
