fix: restore provenance: false in Docker builds
The `provenance: false` setting was accidentally removed in b6f61772
("remove Docker layer caching support") along with the caching config.

Without it, `docker/build-push-action@v6` creates manifest lists (with
provenance attestations) for per-arch images. This causes
`docker manifest create` to fail with "is a manifest list" because
Docker CLI cannot nest manifest lists.

--- a/.github/workflows/component-build.yml
+++ b/.github/workflows/component-build.yml
@@ -164,6 +164,9 @@ jobs:
           context: .
           file: ./${{ inputs.docker-file-name }}
           push: true
+          # Disable provenance to keep single-platform images simple (not manifest lists).
+          # Required for manual multi-arch manifest creation in create-manifest job.
+          provenance: false
           no-cache: true
           build-args: |
             ${{ inputs.additional-build-args }}
